# chiaki

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: switch.cmake
lib/: CMakeLists.txt
scripts/switch/: Dockerfile  build.sh  run-docker-build-chiaki.sh
switch/: CMakeLists.txt  README.md
switch/include/: discoverymanager.h  gui.h  host.h  io.h  settings.h
switch/include/ui/: clickableimage.h  customdialog.h
switch/src/: discoverymanager.cpp  gui.cpp  host.cpp  io.cpp  main.cpp  main_oc  settings.cpp
switch/src/ui/: clickableimage.cpp  customdialog.cpp
